--- a/T05GLOBE/T05GLOBE.vcproj
+++ b/T05GLOBE/T05GLOBE.vcproj
@@ -183,6 +183,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\IMAGE.C"
+				>
+			</File>
+			<File
 				RelativePath=".\T05GLOBE.C"
 				>
 			</File>
@@ -193,15 +197,17 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\DEF.H"
+				>
+			</File>
+			<File
 				RelativePath=".\globe.h"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
-			>
+			<File
+				RelativePath=".\IMAGE.H"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
