--- a/T06ANIM/T06ANIM.vcproj
+++ b/T06ANIM/T06ANIM.vcproj
@@ -195,6 +195,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ucow.c"
+				>
+			</File>
+			<File
 				RelativePath=".\UNIT.C"
 				>
 			</File>
